# fastapi-poetry-boilerplate

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
src/api/: main.py
src/api/database/: crud.py  schema.py
src/api/models/: book.py
src/api/routers/: books.py
src/api/templates/: homepage.html
