[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["sinhaGuild <anurag.r.sinha@gmail.com>"]
readme = "README.md"
packages = [{include = "api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.92.0"}
rich = "^13.3.1"
sqlalchemy = "^2.0.3"
jinja2 = "^3.1.2"

[tool.poetry.scripts]
dev = "api.main:dev"
start = "api.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
